--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Christian poetry, English (Middle) -- Translations into English'
+- GITenberg
 title: "The Pearl\r\nA Middle English Poem, A Modern Version in the Metre of the Original"
 url: http://www.gutenberg.org/ebooks/13211
